--- a/AmbientMonitoring/app/build.gradle
+++ b/AmbientMonitoring/app/build.gradle
@@ -65,8 +65,8 @@ dependencies {
     compile 'io.realm:realm-android:0.87.4'
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
-    compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:design:23.2.0'
     compile 'com.android.support:support-v4:23.2.0'
     compile 'me.grantland:autofittextview:0.2.+'
+    compile 'com.squareup:otto:1.3.8'
 }
